@@ -73,6 +73,7 @@ S3method(adipart, default)
 S3method(adipart, formula)
 # AIC: stats
 S3method(AIC, radfit)
+S3method(AIC, radfit.frame)
 # RsquareAdj: vegan
 S3method(RsquareAdj, cca)
 S3method(RsquareAdj, default)
@@ -123,6 +124,7 @@ S3method(cca, formula)
 # coef: stats
 S3method(coef, cca)
 S3method(coef, radfit)
+S3method(coef, radfit.frame)
 S3method(coef, rda)
 # confint: stats -- also uses MASS:::confint.glm & MASS:::profile.glm
 # does this work with namespaces??
@@ -144,6 +146,8 @@ S3method(densityplot, oecosimu)
 # deviance: stats
 S3method(deviance, cca)
 S3method(deviance, rda)
+S3method(deviance, radfit)
+S3method(deviance, radfit.frame)
 # drop1: stats
 S3method(drop1, cca)
 # eigenvals: vegan
@@ -170,6 +174,7 @@ S3method(fitted, capscale)
 S3method(fitted, cca)
 S3method(fitted, procrustes)
 S3method(fitted, radfit)
+S3method(fitted, radfit.frame)
 S3method(fitted, rda)
 # goodness: vegan
 S3method(goodness, cca)
@@ -192,7 +197,11 @@ S3method(lines, preston)
 S3method(lines, prestonfit)
 S3method(lines, procrustes)
 S3method(lines, radline)
+S3method(lines, radfit)
 S3method(lines, spantree)
+## logLik: stats
+S3method(logLik, radfit)
+S3method(logLik, radfit.frame)
 # model.frame, model.matrix: stats
 S3method(model.frame, cca)
 S3method(model.matrix, cca)
@@ -273,12 +282,16 @@ S3method(points, ordiplot)
 S3method(points, orditkplot)
 S3method(points, procrustes)
 S3method(points, radline)
+S3method(points, radfit)
 # predict: stats
 S3method(predict, cca)
 S3method(predict, decorana)
 S3method(predict, fitspecaccum)
 S3method(predict, humpfit)
 S3method(predict, procrustes)
+S3method(predict, radline)
+S3method(predict, radfit)
+S3method(predict, radfit.frame)
 S3method(predict, rda)
 S3method(predict, specaccum)
 # print: base
@@ -346,6 +359,7 @@ S3method(profile, humpfit)
 # radfit: vegan
 S3method(radfit, data.frame)
 S3method(radfit, default)
+S3method(radfit, matrix)
 # rda: vegan
 S3method(rda, default)
 S3method(rda, formula)
