@@ -1,5 +1,11 @@
 `fitted.radfit` <-
     function(object, ...)
 {
-    matrix(sapply(object$models, fitted), ncol=length(object$models))
+    sapply(object$models, fitted)
+}
+
+`fitted.radfit.frame` <-
+    function(object, ...)
+{
+    lapply(object, fitted, ...)
 }
