@@ -1,8 +1,13 @@
-"plot.radfit" <-
+`plot.radfit` <-
     function (x, BIC = FALSE, legend = TRUE, ...) 
 {
     if (length(x$y) == 0)
         stop("No species, nothing to plot")
+    ## if 'type = "n"', do not add legend (other types are not
+    ## supported)
+    type <- match.call(expand.dots = FALSE)$...$type
+    if (is.null(type))
+        type <- ""
     out <- plot(x$y, ...)
     if (length(x$y) == 1)
         return(invisible(out))
@@ -14,7 +19,7 @@
     lwd <- rep(1, ncol(fv))
     lwd[emph] <- 3
     matlines(fv, lty = 1, lwd = lwd, ...)
-    if (legend) {
+    if (legend && type != "n") {
         nm <- names(x$models)
         legend("topright", legend = nm, lty = 1, lwd = lwd, col = 1:6)
     }
