@@ -1,4 +1,4 @@
-"points.radline" <-
+`points.radline` <-
     function (x, ...) 
 {
     poi <- x$y
@@ -7,4 +7,10 @@
     out <- list(species = cbind(rnk, poi))
     class(out) <- "ordiplot"
     invisible(out)
+}
+
+`points.radfit` <-
+    function(x, ...)
+{
+    points.radline(x, ...)
 }
